fix menu sizing on mobile, add instagram link

--- a/web/src/styles/base.css
+++ b/web/src/styles/base.css
@@ -825,7 +825,7 @@
       }
 
       @media (max-height: 800px) {
-        font-size: 8vh;
+        font-size: 6.5vh;
         line-height: 1.2;
 
         a {
